--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/node": "12.20.11",
     "@types/react": "17.0.4",
     "@types/react-dom": "17.0.3",
+    "chart.js": "3.2.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "3.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "4.2.4",
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/chart.js": "2.9.32"
   }
 }
